--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 0 * * 1' # every Monday at 00:00
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   seria:
     runs-on: ubuntu-latest
